data/derived/comb/progs/unify/prog8494.ml.out
Characters 97-99:
  | Sine sine		    -> sin(pi*eval(sine))
                          ^^
Error: This expression has type float but an expression was expected of type
         int
